# dandara_project

./: .gitignore  README.md  benchmark.sh  compile.sh  run_c.sh  run_rust.sh
c/: diamond_difference.c  diamond_difference.h  main.c
c/DD/: diamond_difference.c  diamond_difference.h  medium_flux.c  scattering_source.h  sweep.c  sweep.h
c/DD/calc/: medium_flux.c  medium_flux.h  scattering_source.c  scattering_source.h  sweep.c  sweep.h
c/MSD/: msd_main.c
c/MSD/calc/: calc_alpha.c  calc_alpha_matrix.c  calc_eig.c  calc_eig.h  calc_sol_dif.c
c/alg/calc/: absorption_rate.c  absorption_rate.h  escape_rate.c  escape_rate.h  quadrature.c  quadrature.h  relative_deviation.c  (+5 more)
c/data/: input.json
julia/: quadrature.jl
linear-c/: CMakeLists.txt
linear-c/data/: input.json
linear-c/include/calc/: absorption_rate.h  escape_rate.h  quadrature.h  relative_deviation.h  scalar_flux.h  trivial_solution_test.h
linear-c/include/core/: common.h  init.h
linear-c/include/methods/: dd.h  msd.h
linear-c/include/methods/dd/: medium_flux.h  scattering_source.h  sweep.h
linear-c/include/methods/msd/: alpha.h  alpha_matrix.h  angular_flux.h  average_angular.h  eigen.h  particular_solution.h  scattering_source.h  solution_difference.h
linear-c/main/: exec_dd.c  exec_msd.c
linear-c/src/calc/: absorption_rate.c  escape_rate.c  quadrature.c  relative_deviation.c  scalar_flux.c  trival_solution_test.c
linear-c/src/core/: init.c
linear-c/src/file/: file_ops.h
linear-c/src/methods/: dd.c  msd.c
linear-c/src/methods/dd/: medium_flux.c  scattering_source.c  sweep.c
linear-c/src/methods/msd/: alpha.c  alpha_matrix.c  angular_flux.c  average_angular.c  eigen.c  particular_solution.c  scattering_source.c  solution_difference.c
linear-rust/: Cargo.toml
linear-rust/src/: calc.rs  core.rs  file.rs  lib.rs  methods.rs
linear-rust/src/calc/: absorption_rate.rs  escape_rate.rs  quadrature.rs  relative_deviation.rs  scalar_flux.rs  trivial_solution_test.rs
linear-rust/src/methods/: dd.rs  msd.rs
linear-rust/src/methods/dd/: medium_flux.rs  scattering_source.rs
linear-rust/src/methods/msd/: particular_solution.rs
python/: quadrature.py
python/DD/: dd_main.py
python/MSD/: msd_main.py
python/common/: calc_abs_rate.py  calc_dr.py  calc_escape_rate.py  calc_fi.py  calc_sigmaA.py  graphics.py  init_variables.py  trivial_sol_test.py
python/quadrature/: quadrature.py
(+19 files in other folders)
