[package]
name = "linear-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ndarray = "0.15"
ndarray-linalg = "0.16"
anyhow = "1.0"

[[bin]]
name = "exec_dd"
path = "cmd/exec_dd.rs"

[[bin]]
name = "exec_msd"
path = "cmd/exec_msd.rs"
